[package]
name = "rust-eth-yt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
ethers = "2.0.10"
ethers-providers = "2.0.10"
ethers-solc = "2.0.10"
eyre = "0.6.8"
hex = "0.4.3"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[[bin]]
name = "transact"
path = "src/simple_transactions.rs"

[[bin]]
name = "deploy"
path = "src/contract_deploy.rs"
